[gd_scene load_steps=60 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/Personagem/_WALK_000.png" type="Texture" id=3]
[ext_resource path="res://assets/Personagem/_WALK_001.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/_WALK_002.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/_WALK_003.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/_WALK_004.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/_WALK_005.png" type="Texture" id=8]
[ext_resource path="res://assets/Personagem/_WALK_006.png" type="Texture" id=9]
[ext_resource path="res://assets/Personagem/_JUMP_000.png" type="Texture" id=10]
[ext_resource path="res://assets/Personagem/_JUMP_001.png" type="Texture" id=11]
[ext_resource path="res://assets/Personagem/_JUMP_002.png" type="Texture" id=12]
[ext_resource path="res://assets/Personagem/_JUMP_003.png" type="Texture" id=13]
[ext_resource path="res://assets/Personagem/_JUMP_004.png" type="Texture" id=14]
[ext_resource path="res://assets/Personagem/_JUMP_005.png" type="Texture" id=15]
[ext_resource path="res://assets/Personagem/_JUMP_006.png" type="Texture" id=16]
[ext_resource path="res://assets/Sounds/jump.wav" type="AudioStream" id=17]
[ext_resource path="res://scenes/Moeda.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/bau.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/heart.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/walker.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/boss.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/ogre.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/bullet.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/blocoDest.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/platMovel.tscn" type="PackedScene" id=26]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=27]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=28]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=29]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=30]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=31]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=32]
[ext_resource path="res://assets/Bonus_Items/Coin_03.png" type="Texture" id=33]
[ext_resource path="res://assets/Fonts/FjordOne-Regular.ttf" type="DynamicFontData" id=34]
[ext_resource path="res://assets/hud_heartFull.png" type="Texture" id=35]
[ext_resource path="res://assets/Bonus_Items/Cartoon Jungle Game Tileset_Collectable Object - Locked Golden Treasure Box.png" type="Texture" id=36]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=37]
[ext_resource path="res://tilesets/castleset.tres" type="TileSet" id=38]
[ext_resource path="res://assets/Backgrounds/Full Moon - background.png" type="Texture" id=39]
[ext_resource path="res://assets/Sounds/background.ogg" type="AudioStream" id=40]
[ext_resource path="res://assets/Sounds/oof.wav" type="AudioStream" id=41]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.8413, 256.636 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 9.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.7144, 57.7176 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.1801, 1.11157 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.1652, 50.9383 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 27.626, 1.25784 )

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 11.576, 4.32288, 0, 0, 0, 0, 361.576, 4.32288 )
}

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.66504, 18.0719, 0, 0, 0, 0, 241.665, 18.0719 )
}

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -4.04419, -1.92114, 0, 0, 0, 0, 205.956, 8.07886 )
}

[sub_resource type="Curve2D" id=10]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.10962, 0.5065, 0, 0, 0, 0, 156.784, 1.83334 )
}

[sub_resource type="Curve2D" id=11]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -3.29236, -5.57373, 0, 0, 0, 0, 526.708, -5.57373 )
}

[sub_resource type="Curve2D" id=12]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -5.01709, -5.9878, 0, 0, 0, 0, 477.233, -3.13783 )
}

[sub_resource type="Curve2D" id=13]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -60.9612, -18.6869, -118.829, 1.94801, 118.829, -1.94801, 246.352, -19.2071, 0, 0, 0, 0, 470.847, -16.7389 )
}

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0117647, 0.0117647, 0.0117647, 0.32549 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.027451, 0.964706, 0.0784314, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=15]
size = 75
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 34 )

[sub_resource type="Gradient" id=16]
colors = PoolColorArray( 1, 0.00392157, 0.00392157, 1, 0.780392, 0.466667, 0.466667, 1 )

[sub_resource type="GradientTexture" id=17]
gradient = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 1
emission_sphere_radius = 20.12
flag_disable_z = true
spread = 40.0
gravity = Vector3( 0, -100, 0 )
angular_velocity = 4.02853e-011
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.4
color_ramp = SubResource( 17 )

[node name="Game" type="Node2D"]
position = Vector2( -238.568, -112.276 )
script = ExtResource( 1 )

[node name="spawn_point" type="Position2D" parent="."]
position = Vector2( 243.111, 468.046 )

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="fim" type="Area2D" parent="."]
position = Vector2( 2911.47, -967.524 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="fim"]
position = Vector2( 4851.7, 310.547 )
shape = SubResource( 1 )

[node name="dead_camera" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 800

[node name="personagem" type="KinematicBody2D" parent="."]
position = Vector2( 292.17, 483.563 )
z_index = 1
collision_mask = 2
collision/safe_margin = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="AnimatedSprite" parent="personagem"]
position = Vector2( 29.6289, 8.99585 )
scale = Vector2( 0.124069, 0.124069 )
frames = SubResource( 2 )
frame = 2

[node name="shape" type="CollisionShape2D" parent="personagem"]
position = Vector2( 1.88676, 1.13206 )
shape = SubResource( 3 )

[node name="rayE" type="RayCast2D" parent="personagem"]
position = Vector2( -24.23, 58.3905 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="rayD" type="RayCast2D" parent="personagem"]
position = Vector2( 28.2021, 57.5961 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="camera" type="Camera2D" parent="personagem"]
current = true
limit_left = 0
limit_bottom = 800
smoothing_enabled = true

[node name="pes" type="Area2D" parent="personagem"]
position = Vector2( 0.263489, 0 )
collision_layer = 1024
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="personagem/pes"]
position = Vector2( 1.54001, 61.6009 )
shape = SubResource( 4 )

[node name="corpo" type="Area2D" parent="personagem"]
editor/display_folded = true
collision_layer = 1024
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="personagem/corpo"]
position = Vector2( 1.1376, 0 )
shape = SubResource( 5 )

[node name="cabeca" type="Area2D" parent="personagem"]

[node name="shape" type="CollisionShape2D" parent="personagem/cabeca"]
position = Vector2( 1.26477, -59.4713 )
shape = SubResource( 6 )

[node name="jump" type="AudioStreamPlayer" parent="personagem"]
stream = ExtResource( 17 )
volume_db = -15.0

[node name="moedas" type="Node2D" parent="."]
editor/display_folded = true

[node name="moeda" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 645.961, 521.229 )

[node name="moeda2" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 746.961, 520.699 )

[node name="moeda3" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 844.744, 519.885 )

[node name="moeda11" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 364, 23 )

[node name="moeda12" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 459.058, 23 )

[node name="moeda13" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 550.815, 23 )

[node name="moeda4" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 1700.96, 507.926 )

[node name="moeda5" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 1918.79, 348.476 )

[node name="moeda6" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 2076.9, 191.044 )

[node name="moeda7" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 2162.63, 427.028 )

[node name="moeda14" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 4604.27, 252.749 )

[node name="moeda16" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 5282.56, 100.06 )

[node name="moeda17" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 5878.64, -261.108 )

[node name="moeda8" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 2487.81, 512.71 )

[node name="moeda9" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 1152.09, -95.7269 )

[node name="moeda10" parent="moedas" instance=ExtResource( 18 )]
position = Vector2( 1216.5, -96.6294 )

[node name="bau" parent="moedas" instance=ExtResource( 19 )]
position = Vector2( 114.799, 43.0498 )

[node name="bau2" parent="moedas" instance=ExtResource( 19 )]
position = Vector2( 6515.58, -435.609 )

[node name="moeda15" parent="moedas" instance=ExtResource( 20 )]
position = Vector2( 2845.7, 170.913 )

[node name="inimigos" type="Node2D" parent="."]

[node name="walker" parent="inimigos" instance=ExtResource( 21 )]
position = Vector2( 575.086, 497.888 )
curve = SubResource( 7 )

[node name="walker2" parent="inimigos" instance=ExtResource( 21 )]
position = Vector2( 993.96, 247.957 )
curve = SubResource( 8 )

[node name="boss" parent="inimigos" instance=ExtResource( 22 )]
position = Vector2( 2365.49, 497.693 )
curve = SubResource( 9 )

[node name="ogre" parent="inimigos" instance=ExtResource( 23 )]
position = Vector2( 1648.03, 484.631 )
curve = SubResource( 10 )

[node name="bullet" parent="inimigos" instance=ExtResource( 24 )]
position = Vector2( 1490.86, 47.4683 )
curve = SubResource( 11 )

[node name="bullet2" parent="inimigos" instance=ExtResource( 24 )]
position = Vector2( 5522.58, 57.8824 )
curve = SubResource( 12 )

[node name="bullet5" parent="inimigos" instance=ExtResource( 24 )]
position = Vector2( 4831.25, 316.251 )
curve = SubResource( 12 )

[node name="bullet3" parent="inimigos" instance=ExtResource( 24 )]
position = Vector2( 6087.04, -209.771 )
curve = SubResource( 12 )

[node name="bullet4" parent="inimigos" instance=ExtResource( 24 )]
position = Vector2( 6731.24, -352.927 )
curve = SubResource( 12 )

[node name="blocos" type="Node2D" parent="."]

[node name="blocoDest" parent="blocos" instance=ExtResource( 25 )]
position = Vector2( 685.99, 211.416 )

[node name="blocoDest2" parent="blocos" instance=ExtResource( 25 )]
position = Vector2( 2675.65, 427.506 )

[node name="blocoDest3" parent="blocos" instance=ExtResource( 25 )]
position = Vector2( 1151.49, 98.8565 )

[node name="blocoDest4" parent="blocos" instance=ExtResource( 25 )]
position = Vector2( 1221.49, 98.5962 )

[node name="plataformas" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 3217.87, 503.433 )

[node name="platMovel" parent="plataformas" instance=ExtResource( 26 )]
curve = SubResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="controles" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true

[node name="touchLeft" type="TouchScreenButton" parent="CanvasLayer/controles"]
modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( 17.4902, 577.176 )
scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 27 )
pressed = ExtResource( 28 )

[node name="touchRight" type="TouchScreenButton" parent="CanvasLayer/controles"]
modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( 188.206, 577.176 )
scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 29 )
pressed = ExtResource( 30 )

[node name="touchUp" type="TouchScreenButton" parent="CanvasLayer/controles"]
modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( 1114.6, 577.176 )
scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 31 )
pressed = ExtResource( 32 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 126.0
margin_top = 9.0
margin_right = 1154.0
margin_bottom = 109.0
custom_styles/panel = SubResource( 14 )

[node name="coin" type="Sprite" parent="CanvasLayer/Panel"]
position = Vector2( 57.793, 51 )
scale = Vector2( 0.265136, 0.265136 )
texture = ExtResource( 33 )

[node name="coins" type="Label" parent="CanvasLayer/Panel"]
margin_left = 110.595
margin_top = -4.84958
margin_right = 158.595
margin_bottom = 90.1504
custom_fonts/font = SubResource( 15 )
text = "0"

[node name="chests" type="Label" parent="CanvasLayer/Panel"]
margin_left = 530.495
margin_top = -5.0
margin_right = 578.495
margin_bottom = 90.0
custom_fonts/font = SubResource( 15 )
text = "0"

[node name="heart1" type="TextureRect" parent="CanvasLayer/Panel"]
editor/display_folded = true
margin_left = 931.702
margin_top = 21.4702
margin_right = 1005.7
margin_bottom = 79.4702
texture = ExtResource( 35 )
expand = true

[node name="Particles2D" type="Particles2D" parent="CanvasLayer/Panel/heart1"]
position = Vector2( 36.5856, 26.914 )
scale = Vector2( 1.38331, 1.38331 )
process_material = SubResource( 18 )

[node name="heart2" type="TextureRect" parent="CanvasLayer/Panel"]
editor/display_folded = true
margin_left = 849.0
margin_top = 21.0
margin_right = 923.0
margin_bottom = 79.0
texture = ExtResource( 35 )
expand = true

[node name="Particles2D" type="Particles2D" parent="CanvasLayer/Panel/heart2"]
position = Vector2( 36.5856, 26.914 )
scale = Vector2( 1.38331, 1.38331 )
process_material = SubResource( 18 )

[node name="heart3" type="TextureRect" parent="CanvasLayer/Panel"]
editor/display_folded = true
margin_left = 765.0
margin_top = 21.47
margin_right = 839.0
margin_bottom = 79.47
texture = ExtResource( 35 )
expand = true

[node name="Particles2D" type="Particles2D" parent="CanvasLayer/Panel/heart3"]
position = Vector2( 36.5856, 26.914 )
scale = Vector2( 1.38331, 1.38331 )
process_material = SubResource( 18 )

[node name="chest" type="Sprite" parent="CanvasLayer/Panel"]
position = Vector2( 491.9, 48.15 )
scale = Vector2( 0.64375, 0.64375 )
texture = ExtResource( 36 )

[node name="TileSets" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="TileSets"]
tile_set = ExtResource( 37 )
cell_size = Vector2( 70, 70 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -524179, 6, 0, -196524, 7, 0, 458771, 7, 0, 458794, 7, 0, 458809, 7, 0, 524288, 1, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 4, 0, 524309, 4, 0, 524310, 4, 0, 524311, 1, 0, 524312, 0, 0, 524313, 2, 0, 524314, 4, 0, 524315, 4, 0, 524316, 4, 0, 524317, 4, 0, 524318, 4, 0, 524319, 4, 0, 524320, 4, 0, 524321, 4, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 3, 0, 524326, 3, 0, 524327, 3, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 4, 0, 524334, 4, 0, 524335, 4, 0, 524336, 4, 0, 524337, 4, 0, 524338, 4, 0, 524339, 4, 0, 524340, 4, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524344, 0, 0, 524345, 0, 0, 524346, 0, 0, 524347, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 524354, 0, 0, 524355, 0, 0, 524356, 0, 0, 524357, 0, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 589850, 5, 0, 589851, 5, 0, 589852, 5, 0, 589853, 5, 0, 589854, 5, 0, 589855, 5, 0, 589856, 5, 0, 589857, 5, 0, 589858, 3, 0, 589859, 3, 0, 589860, 3, 0, 589861, 3, 0, 589862, 3, 0, 589863, 3, 0, 589864, 3, 0, 589865, 3, 0, 589866, 3, 0, 589867, 3, 0, 589868, 3, 0, 589869, 5, 0, 589870, 5, 0, 589871, 5, 0, 589872, 5, 0, 589873, 5, 0, 589874, 5, 0, 589875, 5, 0, 589876, 5, 0, 589877, 3, 0, 589878, 3, 0, 589879, 3, 0, 589880, 3, 0, 589881, 3, 0, 589882, 3, 0, 589883, 3, 0, 589884, 3, 0, 589885, 3, 0, 589886, 3, 0, 589887, 3, 0, 589888, 3, 0, 589889, 3, 0, 589890, 3, 0, 589891, 3, 0, 589892, 3, 0, 589893, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 5, 0, 655392, 5, 0, 655393, 5, 0, 655394, 3, 0, 655395, 3, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 3, 0, 655400, 3, 0, 655401, 3, 0, 655402, 3, 0, 655403, 3, 0, 655404, 3, 0, 655405, 5, 0, 655406, 5, 0, 655407, 5, 0, 655408, 5, 0, 655409, 5, 0, 655410, 5, 0, 655411, 5, 0, 655412, 5, 0, 655413, 3, 0, 655414, 3, 0, 655415, 3, 0, 655416, 3, 0, 655417, 3, 0, 655418, 3, 0, 655419, 3, 0, 655420, 3, 0, 655421, 3, 0, 655422, 3, 0, 655423, 3, 0, 655424, 3, 0, 655425, 3, 0, 655426, 3, 0, 655427, 3, 0, 655428, 3, 0, 655429, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 5, 0, 720928, 5, 0, 720929, 5, 0, 720930, 3, 0, 720931, 3, 0, 720932, 3, 0, 720933, 3, 0, 720934, 3, 0, 720935, 3, 0, 720936, 3, 0, 720937, 3, 0, 720938, 3, 0, 720939, 3, 0, 720940, 3, 0, 720941, 5, 0, 720942, 5, 0, 720943, 5, 0, 720944, 5, 0, 720945, 5, 0, 720946, 5, 0, 720947, 5, 0, 720948, 5, 0, 720949, 3, 0, 720950, 3, 0, 720951, 3, 0, 720952, 3, 0, 720953, 3, 0, 720954, 3, 0, 720955, 3, 0, 720956, 3, 0, 720957, 3, 0, 720958, 3, 0, 720959, 3, 0, 720960, 3, 0, 720961, 3, 0, 720962, 3, 0, 720963, 3, 0, 720964, 3, 0, 720965, 3, 0 )

[node name="Castle" type="TileMap" parent="TileSets"]
scale = Vector2( 2.5, 2.5 )
tile_set = ExtResource( 38 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -589729, 55, 0, -589725, 55, 0, -524207, 55, 0, -524191, 59, 0, -262145, 15, 0, -327607, 55, 0, -327600, 22, 0, -327599, 23, 0, -327598, 24, 0, -327589, 22, 0, -327588, 23, 0, -327587, 23, 0, -327586, 23, 0, -327585, 23, 0, -327584, 23, 0, -327583, 23, 0, -327582, 23, 0, -327581, 23, 0, -327580, 23, 0, -327579, 23, 0, -327578, 23, 0, -327577, 23, 0, -327576, 23, 0, -327575, 23, 0, -327574, 23, 0, -327573, 23, 0, -327572, 23, 0, -327571, 23, 0, -327570, 23, 0, -327569, 23, 0, -327568, 23, 0, -327567, 23, 0, -196609, 15, 0, -131073, 15, 0, -65537, 15, 0, -131000, 22, 0, -130999, 23, 0, -130998, 24, 0, -1, 15, 0, -65470, 55, 0, 65535, 15, 0, 131071, 15, 0, 65536, 22, 0, 65537, 23, 0, 65538, 23, 0, 65539, 23, 0, 65540, 23, 0, 65541, 23, 0, 65542, 23, 0, 65543, 23, 0, 65544, 23, 0, 65545, 23, 0, 65546, 24, 0, 196607, 15, 0, 131074, 15, 0, 131136, 22, 0, 131137, 23, 0, 131138, 23, 0, 131139, 24, 0, 262143, 15, 0, 196608, 55, 0, 196610, 15, 0, 196612, 55, 0, 196618, 55, 0, 196624, 55, 0, 196633, 22, 0, 196634, 24, 0, 196638, 55, 0, 196642, 22, 0, 196643, 23, 0, 196644, 24, 0, 196646, 55, 0, 196655, 55, 0, 196661, 55, 0, 327679, 15, 0, 262146, 15, 0, 262147, 59, 0, 262156, 22, 0, 262157, 23, 0, 262158, 23, 0, 262159, 24, 0, 262200, 22, 0, 262201, 23, 0, 262202, 24, 0, 393215, 15, 0, 327682, 15, 0, 327703, 22, 0, 327704, 24, 0, 458751, 15, 0, 393216, 52, 0, 393217, 52, 0, 393218, 15, 0, 393221, 53, 0, 393222, 52, 0, 393242, 22, 0, 393243, 24, 0, 393268, 52, 0, 393269, 52, 0, 393270, 52, 0, 393271, 52, 0, 393272, 52, 0, 393273, 52, 0, 524287, 15, 0, 458752, 1, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 3, 0, 458772, 22, 0, 458773, 23, 0, 458774, 24, 0, 458781, 1, 0, 458782, 2, 0, 458783, 2, 0, 458784, 2, 0, 458785, 2, 0, 458786, 2, 0, 458787, 2, 0, 458788, 2, 0, 458789, 2, 0, 458790, 2, 0, 458791, 3, 0, 458798, 1, 0, 458799, 2, 0, 458800, 2, 0, 458801, 2, 0, 458802, 2, 0, 458803, 2, 0, 458804, 2, 0, 458805, 2, 0, 458806, 2, 0, 458807, 2, 0, 458808, 2, 0, 458809, 2, 0, 458810, 2, 0, 458811, 2, 0, 458812, 2, 0, 458813, 3, 0, 589823, 15, 0, 524288, 7, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 8, 0, 524304, 8, 0, 524305, 8, 0, 524317, 7, 0, 524318, 8, 0, 524319, 8, 0, 524320, 8, 0, 524321, 8, 0, 524322, 8, 0, 524323, 8, 0, 524324, 8, 0, 524325, 8, 0, 524326, 8, 0, 524327, 9, 0, 524334, 7, 0, 524335, 8, 0, 524336, 8, 0, 524337, 8, 0, 524338, 8, 0, 524339, 8, 0, 524340, 8, 0, 524341, 8, 0, 524342, 8, 0, 524343, 8, 0, 524344, 8, 0, 524345, 8, 0, 524346, 8, 0, 524347, 8, 0, 524348, 8, 0, 524349, 9, 0, 655359, 15, 0, 589824, 7, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 589838, 8, 0, 589839, 8, 0, 589840, 8, 0, 589841, 8, 0, 589853, 7, 0, 589854, 8, 0, 589855, 8, 0, 589856, 8, 0, 589857, 8, 0, 589858, 8, 0, 589859, 8, 0, 589860, 8, 0, 589861, 8, 0, 589862, 8, 0, 589863, 9, 0, 589870, 7, 0, 589871, 8, 0, 589872, 8, 0, 589873, 8, 0, 589874, 8, 0, 589875, 8, 0, 589876, 8, 0, 589877, 8, 0, 589878, 8, 0, 589879, 8, 0, 589880, 8, 0, 589881, 8, 0, 589882, 8, 0, 589883, 8, 0, 589884, 8, 0, 589885, 9, 0, 720895, 15, 0, 655360, 7, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 655374, 8, 0, 655375, 8, 0, 655376, 8, 0, 655377, 8, 0, 655389, 7, 0, 655390, 8, 0, 655391, 8, 0, 655392, 8, 0, 655393, 8, 0, 655394, 8, 0, 655395, 8, 0, 655396, 8, 0, 655397, 8, 0, 655398, 8, 0, 655399, 9, 0, 655406, 7, 0, 655407, 8, 0, 655408, 8, 0, 655409, 8, 0, 655410, 8, 0, 655411, 8, 0, 655412, 8, 0, 655413, 8, 0, 655414, 8, 0, 655415, 8, 0, 655416, 8, 0, 655417, 8, 0, 655418, 8, 0, 655419, 8, 0, 655420, 8, 0, 655421, 9, 0 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 559.079, 185.904 )
texture = ExtResource( 39 )
offset = Vector2( -150, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="background" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 40 )
volume_db = -15.0
autoplay = true

[node name="death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 41 )
volume_db = -12.0

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="fim" to="personagem" method="_on_fim_body_entered"]
[connection signal="bau" from="personagem" to="." method="_on_personagem_bau"]
[connection signal="fim" from="personagem" to="." method="_on_personagem_fim"]
[connection signal="heart" from="personagem" to="." method="_on_personagem_heart"]
[connection signal="moeda" from="personagem" to="." method="_on_personagem_moeda"]
[connection signal="morreu" from="personagem" to="." method="_on_personagem_morreu"]
[connection signal="body_entered" from="personagem/pes" to="personagem" method="_on_pes_body_entered"]
[connection signal="body_entered" from="personagem/corpo" to="personagem" method="_on_corpo_body_entered"]
[connection signal="body_entered" from="personagem/cabeca" to="personagem" method="_on_cabeca_body_entered"]
